[package]
name = "abyss-promise"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "[abyss] A simple promise implementation with adaptive threadpool support."

[dependencies]
log = "0.4"
parking_lot = "0.12"
crossbeam-channel = "0.5"
once_cell = "1.9"

[dev-dependencies]
futures-lite = "1"
